added scams page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="#">Scams</a>
+            <a href="#scams.html">Scams</a>
             <a href="#">Solutions</a>
             <a href="#">Learn More</a>
         </nav>
