home page by pass

--- a/scams.html
+++ b/scams.html
@@ -11,7 +11,7 @@
         <h1 class="logo">Cyber Safety for Seniors</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="scams.html" class="active">Scams</a></li>
                 <li><a href="#">Solutions</a></li>
                 <li><a href="#">Learn More</a></li>
