--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
                 <a href="scams.html">Scams</a>
                 <a href="#">Solutions</a>
                 <a href="#">Learn More</a>
