--- a/scams.html
+++ b/scams.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scams</title>
-    <link rel="stylesheet" href="scams.css"> 
+    <link rel="stylesheet" href="scams.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1 class="logo">Cyber Safety for Seniors</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,21 +22,34 @@
     <main>
         <section class="hero">
             <h2>Common Online Scams</h2>
-            <p>Be aware of these common online scams to protect yourself.</p>
+            <p>Be vigilant and protect yourself against common scams in the digital world.</p>         
         </section>
 
         <section class="content">
             <h2>Types of Scams</h2>
-            <ul>
-                <li><strong>Phishing:</strong> Deceiving individuals into revealing sensitive information.</li>
-                <li><strong>Malware:</strong> Malicious software that can harm your computer.</li>
-                <li><strong>Social Engineering:</strong> Manipulating people to gain access to confidential information.</li>
-            </ul>
+            <div class="scam-types">
+                <div class="scam-item">
+                    <h3>Phishing</h3>
+                    <p>Deceptive emails or messages that trick you into sharing sensitive information.</p>
+                </div>
+                <div class="scam-item">
+                    <h3>Malware</h3>
+                    <p>Malicious software designed to harm your device or steal personal data.</p>
+                </div>
+                <div class="scam-item">
+                    <h3>Social Engineering</h3>
+                    <p>Psychological manipulation to gain access to confidential information.</p>
+                </div>
+                <div class="scam-item">
+                    <h3>Impersonation Scams</h3>
+                    <p>Fraudsters pretending to be legitimate entities to steal your trust and money.</p>
+                </div>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Cyber Safety for Seniors</p>
+        <p>&copy; 2024 Cyber Safety. All rights reserved.</p>
     </footer>
 </body>
 </html>
