--- a/scams.html
+++ b/scams.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="scams.html" class="active">Scams</a></li>
-                <li><a href="#">Solutions</a></li>
+                <li><a href="solutions.html">Solutions</a></li>
                 <li><a href="#">Learn More</a></li>
             </ul>
         </nav>
@@ -49,7 +49,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Cyber Safety. All rights reserved.</p>
+        <p>&copy; 2024 Safe Sphere. All rights reserved.</p>
     </footer>
 </body>
 </html>
