--- a/video.html
+++ b/video.html
@@ -50,7 +50,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Cyber Safety. All Rights Reserved.</p>
+        <p>&copy; 2024 Safe Sphere. All Rights Reserved.</p>
     </footer>
 
     <!-- Include Video.js JS -->
