--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <a href="index.html">Home</a>
                 <a href="scams.html">Scams</a>
-                <a href="#">Solutions</a>
+                <a href="solutions.html">Solutions</a>
                 <a href="#">Learn More</a>
             </ul>            
         </nav>
@@ -32,7 +32,7 @@
                     </div>
                     <div class="buttons">
                         <a href="video.html"><button>Ai Video</button></a>
-                        <button>SUBSCRIBE</button>
+                        <a href="subscribe.html"><button>SUBSCRIBE</button></a>                        
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="buttons">
                         <a href="video.html"><button>Ai Video</button></a>
-                        <button>SUBSCRIBE</button>
+                        <a href="subscribe.html"><button>SUBSCRIBE</button></a>
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                     </div>
                     <div class="buttons">
                         <a href="video.html"><button>Ai Video</button></a>
-                        <button>SUBSCRIBE</button>
+                        <a href="subscribe.html"><button>SUBSCRIBE</button></a>
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="buttons">
                         <a href="video.html"><button>Ai Video</button></a>
-                        <button>SUBSCRIBE</button>
+                        <a href="subscribe.html"><button>SUBSCRIBE</button></a>
                     </div>
                 </div>
             </div>
