safeShere About us

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="index.html">Home</a>
                 <a href="scams.html">Scams</a>
                 <a href="solutions.html">Solutions</a>
-                <a href="#">Learn More</a>
+                <a href="index.html">Learn More</a>
             </ul>            
         </nav>
     </header>
