--- a/scams.html
+++ b/scams.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="scams.html" class="active">Scams</a></li>
                 <li><a href="solutions.html">Solutions</a></li>
-                <li><a href="#">Learn More</a></li>
+                <li><a href="index.html">Learn More</a></li>
             </ul>
         </nav>
     </header>
