--- a/solutions.html
+++ b/solutions.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="scams.html">Scams</a></li>
                 <li><a href="solutions.html" class="active">Solutions</a></li>
-                <li><a href="learnmore.html">Learn More</a></li>
+                <li><a href="index.html">Learn More</a></li>
             </ul>
         </nav>
     </header>
