--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="content">
                     <div class="title">CYBER SCAMS</div>
                     <div class="des">
-                        Cyber scams can target anyone, so stay alert to protect yourself. Avoid sharing personal details or clicking unknown links. Use strong passwords. Limit what you share on social media, and always verify urgent money requests. When unsure, seek advice from someone you trust.
+                        Cyber scams can target anyone, so stay alert to protect yourself. Avoid sharing personal detail's or clicking unknown links. Use strong passwords. Limit what you share on social media, and always verify urgent money requests. When unsure, seek advice from someone you trust.
                          
                     </div>
                     <div class="buttons">
