--- a/safesphere.html
+++ b/safesphere.html
@@ -33,7 +33,7 @@
             <h2>About Us</h2>
             <p>
                 SafeSphere is more than just a cybersecurity firm — it’s a commitment to creating a safe, secure, and 
-                trustworthy digital environment. Founded with the mission of empowering individuals and organizations, 
+                trustworthy digital environment. Founded with the mission of empowering individual's and organizations, 
                 we stand as a shield against the ever-evolving threats of the digital world.
             </p>
         </section>
@@ -56,7 +56,7 @@
         <section class="vision">
             <h2>Our Vision</h2>
             <p>
-                To redefine cybersecurity by fostering trust, building resilience, and enhancing awareness among individuals 
+                To redefine cybersecurity by fostering trust, building resilience, and enhancing awareness among individual's 
                 and organizations worldwide. SafeSphere envisions a future where everyone can confidently navigate the 
                 digital landscape without fear.
             </p>
