--- a/scams.html
+++ b/scams.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="scam-item">
                     <h3>Impersonation Scams</h3>
-                    <p>Fraudsters pretending to be legitimate entities to steal your trust and money.</p>
+                    <p>Fraudster's pretending to be legitimate entities to steal your trust and money.</p>
                 </div>
             </div>
         </section>
