--- a/video.html
+++ b/video.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="video.html" class="active">Video</a></li>
-                <li><a href="index.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </header>
